# atomic-notes

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  run_eval.py
.github/workflows/: ci.yml
agent/: LICENSE  README.md  STATUS.md  config.py  db.py  eval_agent_stats.py  eval_batch.py  eval_dashboard.py  eval_dashboard_server.py  eval_quality.py  eval_quality_v2.py  eval_quality_v4.py  eval_repeat.py  migrate_jsonl_to_sqlite.py  orchestrator.py
agent/agents/: _subscription_backend.py  background_extractor.py  critic.py  cross_reference.py  extractor.py  langfuse_backend.py  planner.py  quality.py  verifier.py
agent/calibration/: run.py
agent/docs/plans/: 2026-05-18-pdf-enrich.md  2026-05-18-per-agent-tracking.md
agent/docs/superpowers/specs/: 2026-05-20-atomic-notes-monorepo-design.md
agent/pipeline/: anchor_patterns.py  boilerplate_dedup.py  embeddings.py  pdf_chunker.py  vault_writer.py
agent/schemas/: atomic_note.py
agent/tests/: test_acronym_fix.py  test_backends.py  test_chapter_regex.py  test_cost.py  test_db.py  test_decision_engine.py  test_er_stage1_filter.py  test_quality_retraction.py  test_semantic_dedup.py  test_structured_parser.py  test_vault_writer.py
docs/superpowers/plans/: 2026-05-28-runtime-config-layer.md
docs/superpowers/specs/: 2026-06-04-figure-embedding-feasibility.md
examples/: README.md  generate_example_pdf.py
extractive/: README.md  orchestrator.py  requirements.txt
extractive/eval/: extractive_eval.py
extractive/pipeline/: adapter.py  gliner_planner.py  pdf_chunker.py  sentence_extractor.py
extractive/templates/: generic.md.jinja2  obsidian.md.jinja2
foss/: README.md  orchestrator.py  requirements.txt
foss/eval/: foss_eval.py
foss/pipeline/: adapter.py  gliner_planner.py  pdf_chunker.py  sentence_extractor.py
foss/templates/: note.json.jinja2  obsidian.md.jinja2
foss/tests/: test_gliner_planner.py  test_sentence_extractor.py
generative/: .env.example  .gitignore  README.md  __init__.py  cli.py  config.py  db.py  doctor.py  eval_agent_stats.py  eval_batch.py  eval_chunk_recall.py  eval_dashboard.py  eval_dashboard_server.py  eval_figure_feasibility.py  eval_paired.py  eval_progress.py  eval_quality.py  eval_quality_v2.py  eval_quality_v3.py  eval_quality_v4.py  eval_repeat.py  migrate_jsonl_to_sqlite.py  orchestrator.py  pytest.ini  reeval_baseline.py  requirements.txt  runtime_config.py  tag_registry.yml
generative/agents/: _litellm_backend.py  _subscription_backend.py  background_extractor.py  base.py  canonicalizer.py  confidence.py  context_builder.py  critic.py  cross_reference.py  extractor.py  langfuse_backend.py  planner.py  quality.py  structured_output.py  tracing.py  verifier.py
generative/calibration/: __init__.py  adversarial.py  build_labels.py  collect.py  kappa.py  labeling_protocol.md  run.py  sample.py
generative/docs/plans/: 2026-05-18-pdf-enrich-isbn.md  2026-05-18-repo-extraction.md
generative/docs/superpowers/plans/: 2026-05-20-atomic-notes-foss-pipeline.md
generative/gui/: app.py  run_parser.py  runner.py
generative/gui/static/: app.css  app.js  index.html
generative/gui/tests/: test_app.py  test_run_parser.py  test_runner.py
generative/gui/tests/fixtures/: run_stdout_sample.txt
generative/pipeline/: acronym_fix.py  anchor_patterns.py  anchor_repair.py  boilerplate_dedup.py  crash_report.py  cross_draft_hub.py  embeddings.py  error_hints.py  figure_alt.py  pdf_chunker.py  routing_report.py  vault_writer.py
generative/schemas/: atomic_note.py
generative/tests/: test_acronym_fix.py  test_author_norm.py  test_backends.py  test_call_record.py  test_chapter_regex.py  test_chunk_recall.py  test_claim_meta_filter.py  test_cli.py  test_collect_agreement.py  test_collect_db_write.py  test_concept_origin.py  test_config.py  test_cost.py  test_crash_report.py  test_cross_draft_hub_suggest.py  test_cross_reference_links.py  test_dashboard_avg_agree.py  test_dashboard_followups.py  test_dashboard_hall_kpi.py  test_dashboard_honesty.py  test_dashboard_quick_wins.py  test_dashboard_usefulness.py  test_db.py  test_decision_engine.py  test_doctor.py  test_dry_run_eval_scope.py  test_e2e_baseline.py  test_edition_verification.py  test_er_stage1_filter.py  test_error_hints.py  test_eval_cache_namespace.py  test_eval_drop_justification.py  test_example_pdf.py  test_figure_alt.py  test_figure_feasibility.py  test_inline_eval_toggle.py  test_orchestrator_quality_wiring.py  test_overwrite_diff.py  test_overwrite_guard.py  test_pdf_chunker.py  (+19 more)
generative/tests/fixtures_gen/: make_tagged_fixtures.py
generative/tools/: pdf_enrich.py  resolve_chapter_doi.py
internal/dashboard/: eval_dashboard.html
internal/docs/: 2026-06-10-projekt-bewertung.md  dashboard-review-prompt.md  dashboard-visual-polish-prompt.md  doc-backlog.md  faithfulness-gate-plan.md  m1-installierbarkeit-plan.md  pdftotext-vs-pdfplumber-review-prompt.md  projekt-bewertung-prompt.md  stage0-extractor-redesign-plan.md
internal/docs/superpowers/plans/: 2026-05-21-foss-quality-improvements.md
lib/decision_engine/: README.md  __init__.py  aggregation.py  models.py  pipeline.py  rules.py
lib/decision_engine/tests/: conftest.py  test_aggregation.py  test_pipeline.py  test_rules.py
scripts/: demo.py  setup.py
shared/: author_norm.py  db_schema.py  path_safety.py
shared/schemas/: atomic_note_extractive.py  atomic_note_foss.py
tests/extractive/: conftest.py  test_adapter.py  test_e2e.py  test_extractive_eval.py  test_gliner_planner.py  test_pdf_chunker.py  test_sentence_extractor.py
tests/foss/: conftest.py  test_e2e.py  test_foss_eval.py  test_gliner_planner.py  test_pdf_chunker.py  test_sentence_extractor.py
