[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-notes"
version = "0.1.0"
description = "Multi-Agenten-Pipeline: PDF → geprüfte Atomic Notes für Obsidian"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pymupdf>=1.27",
    "rapidfuzz>=3.0",
    "rank-bm25>=0.2",
    "requests>=2.32",
    "sentence-transformers>=3.0",
    # torch direkt deklariert (statt nur transitiv via sentence-transformers), damit das
    # CPU-Wheel-Mapping unter [tool.uv.sources] greift — sonst zoege uv torch vom
    # Default-Index (ggf. grosses CUDA-Wheel).
    "torch>=2.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
# extractive-Pipeline (GLiNER/NLP-Stack) — nur nötig für extractive/
extractive = [
    "pdfplumber>=0.11",
    "gliner>=0.2",
    "sumy>=0.12",
    "nltk>=3.8",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "langdetect>=1.0.9",
    "keybert>=0.8",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    # test_phoenix_span braucht den OTel-SDK (Runtime-Tracing selbst ist lazy/optional)
    "opentelemetry-sdk>=1.25",
    # GUI-Tests (TestClient) brauchen fastapi/httpx/multipart auch im dev-Lauf
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
# Live-Web-GUI (atomic-notes gui) — FastAPI + uvicorn, kein React/npm
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",   # Datei-Upload (Drag-and-Drop)
]

[project.scripts]
atomic-notes = "generative.cli:main"

[tool.setuptools]
packages = [
    "generative",
    "generative.agents",
    "generative.calibration",
    "generative.pipeline",
    "generative.schemas",
    "generative.tools",
    "generative.gui",
    "extractive",
    "extractive.eval",
    "extractive.pipeline",
    "shared",
    "shared.schemas",
    "decision_engine",
]

[tool.setuptools.package-dir]
decision_engine = "lib/decision_engine"

[tool.setuptools.package-data]
generative = ["tag_registry.yml"]
"generative.gui" = ["static/*.html", "static/*.css", "static/*.js"]
extractive = ["templates/*.jinja2"]

[tool.uv]
# Lockfile fuer Windows + Linux aufloesen (Dev = Win, CI = Win + Ubuntu).
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]

# torch als CPU-Wheel (kleiner, CI-tauglich); GPU-Override siehe CONTRIBUTING.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
